# aider-aid

./: .gitignore  DESIGN.md  README.md  pyproject.toml
src/aider_aid/: __init__.py  cli.py  doctor.py  launcher.py  model_discovery.py  ollama_server_store.py  paths.py  profile_store.py  project_store.py  services.py  shell.py  textual_app.py  tui.py
tests/: test_context_size.py  test_doctor.py  test_interactive_mode.py  test_launcher.py  test_model_discovery.py  test_ollama_servers.py  test_profiles.py  test_projects.py  test_services.py  test_textual_app.py  test_tui.py
